# MidKrRegexTool

./: .gitignore  DEVLOG.md  README.md  pyproject.toml  quick_check_parser.py  results.txt
data/training/: training_15c.jsonl
docs/: design.md  roadmap.md
src/midkrregextool/: cli.py  infl_suffixes.txt  lemma_candidates.txt  lemma_whitelist.txt  model.py  parser.py  report.py  search.py  tagger.py  training_results.jsonl  yale.py
src/midkrregextool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/fixtures/: sample_sekpo_excerpt.txt
